# automated-visual-defect-detection-yolo

./: .gitignore  CITATION.cff  IMPLEMENTATION_SUMMARY.md  README.md  best_params.json  data.yaml  find_best_trial.py  main.py  predict.py  pyproject.toml  requirements.txt  run_server.sh  slurm-15965458.out  slurm-15970766.out  slurm-15987162.out  slurm-15987652.out  slurm-16673573.out  slurm-16683585.out  slurm-16683586.out  train.py  tune.sh
configs/: config.yaml
data/: README.md
data/labels/: train.cache
examples/: prepare_data.py  quick_start.py
notebooks/: exploratory_analysis.ipynb
results/: robustness_analysis_report.md  robustness_comparison.csv
results/yolov8s_defect_detector_aug/: args.yaml  results.csv
results/yolov8s_defect_detector_aug/weights/: best.pt  last.pt
results/yolov8s_defect_detector_aug_finetune/: args.yaml  results.csv
results/yolov8s_defect_detector_aug_finetune/weights/: best.pt  last.pt
src/: __init__.py  compare_stats.py  create_empty_labels.py  detect.py  detect_tiled.py  generate_labels.py  make_background_tiles.py  optuna_tune.py  quick_stats.py  robustness_test.py  train.py
src/data/: preprocessing.py
src/evaluation/: metrics.py
src/models/: defect_detector.py
src/utils/: helpers.py
src/visualization/: visualizer.py
thesis/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
thesis/sections/: clean.py  conclusion.tex  discussion.tex  introduction.tex  justification.tex  literature_review.tex  optimization.tex  results.tex  theory.tex
