[project]
name = "defectdetectionyolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=1.4.0",
    "bibtexparser>=1.4.3",
    "fuzzywuzzy>=0.18.0",
    "habanero>=1.2.6",
    "ipykernel>=6.30.1",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.179",
]
